// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Components service endpoint returns an array of multiple components with key software renders each component with each key software 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Components
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    GraphQL Schemas
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Repos
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Errors
  
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
    components="[object Object],[object Object],[object Object]"
  >
     
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-primary collapsed"
      id="toggleFilters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__95"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__95__BV_label_"
                  tabindex="-1"
                >
                  Teams
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__96"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__96_BV_option_0"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__96_BV_option_0"
                      >
                        <span>
                          test-team-id-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__96_BV_option_1"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__96_BV_option_1"
                      >
                        <span>
                          test-team-id-1-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__96_BV_option_2"
                        name="team"
                        type="checkbox"
                        value="test-team-id-2-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__96_BV_option_2"
                      >
                        <span>
                          test-team-id-2-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__96_BV_option_3"
                        name="team"
                        type="checkbox"
                        value="test-team-id-2-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__96_BV_option_3"
                      >
                        <span>
                          test-team-id-2-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__96_BV_option_4"
                        name="team"
                        type="checkbox"
                        value="test-team-id-3-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__96_BV_option_4"
                      >
                        <span>
                          test-team-id-3-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__96_BV_option_5"
                        name="team"
                        type="checkbox"
                        value="test-team-id-3-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__96_BV_option_5"
                      >
                        <span>
                          test-team-id-3-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__103"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__103__BV_label_"
                  tabindex="-1"
                >
                  Tags
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__104"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__104_BV_option_0"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__104_BV_option_0"
                      >
                        <span>
                          test-tag-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__104_BV_option_1"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__104_BV_option_1"
                      >
                        <span>
                          test-tag-1-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__104_BV_option_2"
                        name="tag"
                        type="checkbox"
                        value="test-tag-2-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__104_BV_option_2"
                      >
                        <span>
                          test-tag-2-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__104_BV_option_3"
                        name="tag"
                        type="checkbox"
                        value="test-tag-2-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__104_BV_option_3"
                      >
                        <span>
                          test-tag-2-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__104_BV_option_4"
                        name="tag"
                        type="checkbox"
                        value="test-tag-3-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__104_BV_option_4"
                      >
                        <span>
                          test-tag-3-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__104_BV_option_5"
                        name="tag"
                        type="checkbox"
                        value="test-tag-3-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__104_BV_option_5"
                      >
                        <span>
                          test-tag-3-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__111"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__111__BV_label_"
                  tabindex="-1"
                >
                  Component Types
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__112"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__112_BV_option_0"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__112_BV_option_0"
                      >
                        <span>
                          test-component-type-id-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__112_BV_option_1"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__112_BV_option_1"
                      >
                        <span>
                          test-component-type-id-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__112_BV_option_2"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-3"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__112_BV_option_2"
                      >
                        <span>
                          test-component-type-id-3
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__116"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__116__BV_label_"
                  tabindex="-1"
                >
                  Platforms
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__117"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__117_BV_option_0"
                        name="platformId"
                        type="checkbox"
                        value="undefined"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__117_BV_option_0"
                      >
                        <span>
                          undefined
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <div
                class="form-group"
                id="__BVID__119"
                role="group"
              >
                <label
                  class="d-block"
                  for="component-filter"
                  id="__BVID__119__BV_label_"
                >
                  Component
                </label>
                <div>
                  <select
                    class="custom-select custom-select-sm"
                    id="component-filter"
                  >
                    <option
                      value=""
                    >
                      Please select a component
                    </option>
                    <option
                      value="test-component-id-1"
                    >
                      test-component-id-1
                    </option>
                    <option
                      value="test-component-id-2"
                    >
                      test-component-id-2
                    </option>
                    <option
                      value="test-component-id-3"
                    >
                      test-component-id-3
                    </option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-2
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-2"
          >
            Test Component Name 2
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-3
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-3"
          >
            Test Component Name 3
          </a>
        </td>
         
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Components service endpoint returns an array of multiple components with no key software renders a table row for each component 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Components
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    GraphQL Schemas
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Repos
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Errors
  
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
    components="[object Object],[object Object],[object Object]"
  >
     
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-primary collapsed"
      id="toggleFilters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__49"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__49__BV_label_"
                  tabindex="-1"
                >
                  Teams
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__50"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__50_BV_option_0"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__50_BV_option_0"
                      >
                        <span>
                          test-team-id-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__50_BV_option_1"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__50_BV_option_1"
                      >
                        <span>
                          test-team-id-1-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__50_BV_option_2"
                        name="team"
                        type="checkbox"
                        value="test-team-id-2-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__50_BV_option_2"
                      >
                        <span>
                          test-team-id-2-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__50_BV_option_3"
                        name="team"
                        type="checkbox"
                        value="test-team-id-2-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__50_BV_option_3"
                      >
                        <span>
                          test-team-id-2-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__50_BV_option_4"
                        name="team"
                        type="checkbox"
                        value="test-team-id-3-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__50_BV_option_4"
                      >
                        <span>
                          test-team-id-3-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__50_BV_option_5"
                        name="team"
                        type="checkbox"
                        value="test-team-id-3-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__50_BV_option_5"
                      >
                        <span>
                          test-team-id-3-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__57"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__57__BV_label_"
                  tabindex="-1"
                >
                  Tags
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__58"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__58_BV_option_0"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__58_BV_option_0"
                      >
                        <span>
                          test-tag-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__58_BV_option_1"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__58_BV_option_1"
                      >
                        <span>
                          test-tag-1-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__58_BV_option_2"
                        name="tag"
                        type="checkbox"
                        value="test-tag-2-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__58_BV_option_2"
                      >
                        <span>
                          test-tag-2-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__58_BV_option_3"
                        name="tag"
                        type="checkbox"
                        value="test-tag-2-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__58_BV_option_3"
                      >
                        <span>
                          test-tag-2-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__58_BV_option_4"
                        name="tag"
                        type="checkbox"
                        value="test-tag-3-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__58_BV_option_4"
                      >
                        <span>
                          test-tag-3-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__58_BV_option_5"
                        name="tag"
                        type="checkbox"
                        value="test-tag-3-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__58_BV_option_5"
                      >
                        <span>
                          test-tag-3-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__65"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__65__BV_label_"
                  tabindex="-1"
                >
                  Component Types
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__66"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__66_BV_option_0"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__66_BV_option_0"
                      >
                        <span>
                          test-component-type-id-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__66_BV_option_1"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__66_BV_option_1"
                      >
                        <span>
                          test-component-type-id-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__66_BV_option_2"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-3"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__66_BV_option_2"
                      >
                        <span>
                          test-component-type-id-3
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__70"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__70__BV_label_"
                  tabindex="-1"
                >
                  Platforms
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__71"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__71_BV_option_0"
                        name="platformId"
                        type="checkbox"
                        value="undefined"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__71_BV_option_0"
                      >
                        <span>
                          undefined
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <div
                class="form-group"
                id="__BVID__73"
                role="group"
              >
                <label
                  class="d-block"
                  for="component-filter"
                  id="__BVID__73__BV_label_"
                >
                  Component
                </label>
                <div>
                  <select
                    class="custom-select custom-select-sm"
                    id="component-filter"
                  >
                    <option
                      value=""
                    >
                      Please select a component
                    </option>
                    <option
                      value="test-component-id-1"
                    >
                      test-component-id-1
                    </option>
                    <option
                      value="test-component-id-2"
                    >
                      test-component-id-2
                    </option>
                    <option
                      value="test-component-id-3"
                    >
                      test-component-id-3
                    </option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-2
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-2"
          >
            Test Component Name 2
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-3
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-3"
          >
            Test Component Name 3
          </a>
        </td>
         
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Components service endpoint returns an array of multiple components with the same key software names for each component renders only one table column per key software name 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Components
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    GraphQL Schemas
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Repos
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Errors
  
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
    components="[object Object],[object Object],[object Object]"
  >
     
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-primary collapsed"
      id="toggleFilters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__141"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__141__BV_label_"
                  tabindex="-1"
                >
                  Teams
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__142"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__142_BV_option_0"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__142_BV_option_0"
                      >
                        <span>
                          test-team-id-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__142_BV_option_1"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__142_BV_option_1"
                      >
                        <span>
                          test-team-id-1-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__142_BV_option_2"
                        name="team"
                        type="checkbox"
                        value="test-team-id-2-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__142_BV_option_2"
                      >
                        <span>
                          test-team-id-2-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__142_BV_option_3"
                        name="team"
                        type="checkbox"
                        value="test-team-id-2-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__142_BV_option_3"
                      >
                        <span>
                          test-team-id-2-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__142_BV_option_4"
                        name="team"
                        type="checkbox"
                        value="test-team-id-3-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__142_BV_option_4"
                      >
                        <span>
                          test-team-id-3-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__142_BV_option_5"
                        name="team"
                        type="checkbox"
                        value="test-team-id-3-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__142_BV_option_5"
                      >
                        <span>
                          test-team-id-3-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__149"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__149__BV_label_"
                  tabindex="-1"
                >
                  Tags
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__150"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__150_BV_option_0"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__150_BV_option_0"
                      >
                        <span>
                          test-tag-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__150_BV_option_1"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__150_BV_option_1"
                      >
                        <span>
                          test-tag-1-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__150_BV_option_2"
                        name="tag"
                        type="checkbox"
                        value="test-tag-2-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__150_BV_option_2"
                      >
                        <span>
                          test-tag-2-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__150_BV_option_3"
                        name="tag"
                        type="checkbox"
                        value="test-tag-2-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__150_BV_option_3"
                      >
                        <span>
                          test-tag-2-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__150_BV_option_4"
                        name="tag"
                        type="checkbox"
                        value="test-tag-3-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__150_BV_option_4"
                      >
                        <span>
                          test-tag-3-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__150_BV_option_5"
                        name="tag"
                        type="checkbox"
                        value="test-tag-3-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__150_BV_option_5"
                      >
                        <span>
                          test-tag-3-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__157"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__157__BV_label_"
                  tabindex="-1"
                >
                  Component Types
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__158"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__158_BV_option_0"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__158_BV_option_0"
                      >
                        <span>
                          test-component-type-id-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__158_BV_option_1"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__158_BV_option_1"
                      >
                        <span>
                          test-component-type-id-2
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__158_BV_option_2"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-3"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__158_BV_option_2"
                      >
                        <span>
                          test-component-type-id-3
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__162"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__162__BV_label_"
                  tabindex="-1"
                >
                  Platforms
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__163"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__163_BV_option_0"
                        name="platformId"
                        type="checkbox"
                        value="undefined"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__163_BV_option_0"
                      >
                        <span>
                          undefined
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <div
                class="form-group"
                id="__BVID__165"
                role="group"
              >
                <label
                  class="d-block"
                  for="component-filter"
                  id="__BVID__165__BV_label_"
                >
                  Component
                </label>
                <div>
                  <select
                    class="custom-select custom-select-sm"
                    id="component-filter"
                  >
                    <option
                      value=""
                    >
                      Please select a component
                    </option>
                    <option
                      value="test-component-id-1"
                    >
                      test-component-id-1
                    </option>
                    <option
                      value="test-component-id-2"
                    >
                      test-component-id-2
                    </option>
                    <option
                      value="test-component-id-3"
                    >
                      test-component-id-3
                    </option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-2
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-2"
          >
            Test Component Name 2
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-3
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-3"
          >
            Test Component Name 3
          </a>
        </td>
         
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Components service endpoint returns an empty array renders the page 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Components
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    GraphQL Schemas
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Repos
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Errors
  
    </a>
  </div>
   
  <!---->
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
      </tr>
    </thead>
     
    <tbody />
  </table>
</div>
`;

exports[`Index when a key software has multiple versions renders all versions 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Components
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    GraphQL Schemas
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Repos
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Errors
  
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
    components="[object Object]"
  >
     
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-primary collapsed"
      id="toggleFilters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__187"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__187__BV_label_"
                  tabindex="-1"
                >
                  Teams
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__188"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__188_BV_option_0"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__188_BV_option_0"
                      >
                        <span>
                          test-team-id-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__188_BV_option_1"
                        name="team"
                        type="checkbox"
                        value="test-team-id-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__188_BV_option_1"
                      >
                        <span>
                          test-team-id-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__191"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__191__BV_label_"
                  tabindex="-1"
                >
                  Tags
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__192"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__192_BV_option_0"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__192_BV_option_0"
                      >
                        <span>
                          test-tag-1-1
                        </span>
                      </label>
                    </div>
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__192_BV_option_1"
                        name="tag"
                        type="checkbox"
                        value="test-tag-1-2"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__192_BV_option_1"
                      >
                        <span>
                          test-tag-1-2
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__195"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__195__BV_label_"
                  tabindex="-1"
                >
                  Component Types
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__196"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__196_BV_option_0"
                        name="componentTypeId"
                        type="checkbox"
                        value="test-component-type-id-1"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__196_BV_option_0"
                      >
                        <span>
                          test-component-type-id-1
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <fieldset
                class="form-group"
                id="__BVID__198"
              >
                <legend
                  class="bv-no-focus-ring col-form-label pt-0"
                  id="__BVID__198__BV_label_"
                  tabindex="-1"
                >
                  Platforms
                </legend>
                <div>
                  <div
                    class="bv-no-focus-ring"
                    id="__BVID__199"
                    role="group"
                    tabindex="-1"
                  >
                    <div
                      class="custom-control custom-checkbox"
                    >
                      <input
                        class="custom-control-input"
                        id="__BVID__199_BV_option_0"
                        name="platformId"
                        type="checkbox"
                        value="undefined"
                      />
                      <label
                        class="custom-control-label"
                        for="__BVID__199_BV_option_0"
                      >
                        <span>
                          undefined
                        </span>
                      </label>
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body p-2"
            >
              <!---->
              <!---->
              <div
                class="form-group"
                id="__BVID__201"
                role="group"
              >
                <label
                  class="d-block"
                  for="component-filter"
                  id="__BVID__201__BV_label_"
                >
                  Component
                </label>
                <div>
                  <select
                    class="custom-select custom-select-sm"
                    id="component-filter"
                  >
                    <option
                      value=""
                    >
                      Please select a component
                    </option>
                    <option
                      value="test-component-id-1"
                    >
                      test-component-id-1
                    </option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;
